@@ -20,6 +20,7 @@ import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.List;
 
@@ -34,6 +35,12 @@ public class RSAController {
     public RadioButton keySize3072;
     private RSA rsa;
     private TextConverter textConverter;
+    private List<BigInteger> encryptedBlocks; // Pole do przechowywania zaszyfrowanych bloków
+
+    // Konstruktor
+    public RSAController() {
+        this.encryptedBlocks = new ArrayList<>(); // Inicjalizacja listy zaszyfrowanych bloków
+    }
 
     public void onGenerateKey(ActionEvent actionEvent) {
         int keySize;
@@ -48,7 +55,7 @@ public class RSAController {
             return;
         }
         this.rsa = new RSA(keySize);
-        int blockSize=keySize/8-11;
+        int blockSize = (keySize / 8) - 11;
         this.textConverter = new TextConverter(blockSize);
         publicKeyField.setText(rsa.getPublicKeyString());
         privateKeyField.setText(rsa.getPrivateKeyString());
@@ -65,44 +72,39 @@ public class RSAController {
 
     public void encrypt(ActionEvent actionEvent) {
         String text = inputTextArea.getText();
-        List<byte[]> blocks = textConverter.divideIntoRSABlocks(text.getBytes());
-        List<String> encryptedBlockStrings = new ArrayList<>();
+        byte[] textBytes = text.getBytes(StandardCharsets.UTF_8);
+        List<byte[]> blocks = textConverter.divideIntoRSABlocks(textBytes);
+        encryptedBlocks.clear(); // Wyczyszczenie listy zaszyfrowanych bloków przed nowym szyfrowaniem
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         try {
             for (byte[] block : blocks) {
                 BigInteger message = new BigInteger(1, block);
                 BigInteger encrypted = rsa.encrypt(message);
-                String base64Encoded = Base64.getEncoder().encodeToString(encrypted.toByteArray());
-                encryptedBlockStrings.add(base64Encoded);
+                encryptedBlocks.add(encrypted); // Zapisanie zaszyfrowanego bloku do listy
+                byte[] encryptedBytes = encrypted.toByteArray();
+                outputStream.write(encryptedBytes);
             }
-            // Łączymy listę zaszyfrowanych bloków do wyświetlenia, oddzielając je przecinkami
-            String encodedString = String.join(", ", encryptedBlockStrings);
+            String encodedString = Base64.getEncoder().encodeToString(outputStream.toByteArray());
             outputTextArea.setText(encodedString);
         } catch (Exception e) {
             outputTextArea.setText("Encryption failed: " + e.getMessage());
         }
     }
 
-
     public void decrypt(ActionEvent actionEvent) {
-        String encodedText = outputTextArea.getText();
-        String[] encodedBlocks = encodedText.split(", ");  // Zakładamy, że bloki są oddzielone przecinkami
-        StringBuilder decryptedTextBuilder = new StringBuilder();
-
         try {
-            for (String encodedBlock : encodedBlocks) {
-                byte[] decodedBytes = Base64.getDecoder().decode(encodedBlock);
-                BigInteger encrypted = new BigInteger(1, decodedBytes);
+            StringBuilder decryptedTextBuilder = new StringBuilder();
+            for (BigInteger encrypted : encryptedBlocks) {
                 BigInteger decrypted = rsa.decrypt(encrypted);
-                decryptedTextBuilder.append(new String(decrypted.toByteArray()));
-                //decryptedTextBuilder.append("\n");  // Dodajemy nową linię dla każdego bloku
+                byte[] decryptedBytes = decrypted.toByteArray();
+                decryptedTextBuilder.append(new String(decryptedBytes, StandardCharsets.UTF_8));
             }
             inputTextArea.setText(decryptedTextBuilder.toString());
         } catch (Exception e) {
-            inputTextArea.setText("Decryption failed: " + e.getMessage());
+            outputTextArea.setText("Decryption failed: " + e.getMessage());
         }
     }
-
 
     public void encryptFile(ActionEvent actionEvent) {
         FileChooser fileChooser = new FileChooser();
@@ -110,20 +112,31 @@ public class RSAController {
         if (file != null) {
             try {
                 byte[] fileData = Files.readAllBytes(Paths.get(file.getAbsolutePath()));
-                List<byte[]> blocks = textConverter.divineIntoBlocksFile(fileData);
-                List<String> encryptedBlockStrings = new ArrayList<>();
+                List<byte[]> blocks = textConverter.divideIntoRSABlocks(fileData);
+                encryptedBlocks.clear(); // Wyczyszczenie listy zaszyfrowanych bloków przed nowym szyfrowaniem
+                ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
                 for (byte[] block : blocks) {
                     BigInteger message = new BigInteger(1, block);
                     BigInteger encrypted = rsa.encrypt(message);
-                    String base64Encoded = Base64.getEncoder().encodeToString(encrypted.toByteArray());
-                    encryptedBlockStrings.add(base64Encoded);
+                    encryptedBlocks.add(encrypted); // Zapisanie zaszyfrowanego bloku do listy
+
+                    byte[] encryptedBytes = encrypted.toByteArray();
+                    int encryptedBlockSize = rsa.getN().bitLength() / 8;
+                    if (encryptedBytes.length < encryptedBlockSize) {
+                        byte[] paddedEncryptedBytes = new byte[encryptedBlockSize];
+                        System.arraycopy(encryptedBytes, 0, paddedEncryptedBytes, encryptedBlockSize - encryptedBytes.length, encryptedBytes.length);
+                        encryptedBytes = paddedEncryptedBytes;
+                    }
+
+                    outputStream.write(encryptedBytes);
                 }
-                String encodedString = String.join(", ", encryptedBlockStrings);
+
+                byte[] encryptedData = outputStream.toByteArray();
                 FileChooser saveFileChooser = new FileChooser();
                 File saveFile = saveFileChooser.showSaveDialog(null);
                 if (saveFile != null) {
-                    Files.writeString(Paths.get(saveFile.getAbsolutePath()), encodedString, StandardCharsets.UTF_8);
+                    Files.write(Paths.get(saveFile.getAbsolutePath()), encryptedData);
                 }
             } catch (IOException e) {
                 e.printStackTrace();
@@ -131,27 +144,31 @@ public class RSAController {
         }
     }
 
-
     public void decryptFile(ActionEvent actionEvent) {
         FileChooser fileChooser = new FileChooser();
         fileChooser.setTitle("Wybierz zaszyfrowany plik do odszyfrowania");
         File file = fileChooser.showOpenDialog(null);
         if (file != null) {
             try {
-                String encodedString = Files.readString(Paths.get(file.getAbsolutePath()), StandardCharsets.UTF_8);
-                String[] encodedBlocks = encodedString.split(", ");
-                StringBuilder decryptedTextBuilder = new StringBuilder();
+                byte[] encodedData = Files.readAllBytes(Paths.get(file.getAbsolutePath()));
+                int blockSize = rsa.getN().bitLength() / 8;
+                ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
-                for (String encodedBlock : encodedBlocks) {
-                    byte[] decodedBytes = Base64.getDecoder().decode(encodedBlock);
-                    BigInteger encrypted = new BigInteger(1, decodedBytes);
+                for (int start = 0; start < encodedData.length; start += blockSize) {
+                    int end = Math.min(start + blockSize, encodedData.length);
+                    byte[] block = Arrays.copyOfRange(encodedData, start, end);
+
+                    BigInteger encrypted = new BigInteger(1, block);
                     BigInteger decrypted = rsa.decrypt(encrypted);
-                    decryptedTextBuilder.append(new String(decrypted.toByteArray(), StandardCharsets.UTF_8));
+                    byte[] decryptedBytes = decrypted.toByteArray();
+                    outputStream.write(decryptedBytes);
                 }
+
+                byte[] decryptedData = outputStream.toByteArray();
                 FileChooser saveFileChooser = new FileChooser();
                 File saveFile = saveFileChooser.showSaveDialog(null);
                 if (saveFile != null) {
-                    Files.writeString(Paths.get(saveFile.getAbsolutePath()), decryptedTextBuilder.toString(), StandardCharsets.UTF_8);
+                    Files.write(Paths.get(saveFile.getAbsolutePath()), decryptedData);
                 }
             } catch (IOException e) {
                 e.printStackTrace();
